###############################################################################
# Automake targets and declarations for libcaca
###############################################################################

lib_LIBRARIES = libcaca.a
libcaca_a_SOURCES = \
	caca.c \
	caca.h \
	caca_internals.h \
	graphics.c \
	io.c \
	math.c \
	line.c \
	box.c \
	conic.c \
	triangle.c \
	sprite.c \
	blit.c \
	$(NULL)

