###############################################################################
# Automake targets and declarations for libee
###############################################################################

lib_LIBRARIES = libee.a
libee_a_SOURCES = \
	ee.c \
	ee.h \
	io.c \
	math.c \
	line.c \
	conic.c \
	triangle.c \
	sprite.c \
	$(NULL)

