###############################################################################
# Automake targets and declarations for libee
###############################################################################

lib_LIBRARIES = libee.a
libee_a_SOURCES = \
	ee.c \
	ee.h \
	ee_internals.h \
	graphics.c \
	io.c \
	math.c \
	line.c \
	box.c \
	conic.c \
	triangle.c \
	sprite.c \
	$(NULL)

