# $Id$

NULL =

EXTRA_DIST = libcaca.sln \
             config.h \
             common.h \
             libcucul.vcproj \
             libcaca.vcproj \
             cacafire.vcproj \
             cacademo.vcproj \
             cucul-sharp.csproj \
             caca-sharp.csproj \
             test-csharp.csproj \
             $(NULL)

