# $Id$

NULL =

EXTRA_DIST = libcaca.sln \
             config.h \
             caca_types.h \
             libcaca.vcproj \
             libcaca.vcproj \
             cacafire.vcproj \
             cacademo.vcproj \
             caca-sharp.csproj \
             caca-sharp.csproj \
             test-csharp.csproj \
             $(NULL)

